templates/citadel-production/kubernetes/app-starter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-app
  labels:
    app.kubernetes.io/name: example-app
    app.kubernetes.io/part-of: devops-playground
