templates/citadel-production/kubernetes/app-starter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: example-app
spec:
  selector:
    app.kubernetes.io/name: example-app
  ports:
    - name: http
      port: 80
      targetPort: http
